Home page 2nd Navbar overlapping issue fixed

--- a/src/App.css
+++ b/src/App.css
@@ -31,6 +31,7 @@
   /* position: -webkit-sticky; */
   position: sticky;
   top: 0;
+  z-index: 1;
 }
 
 .ingcls{
